--- a/course/bsc-nuro-course.html
+++ b/course/bsc-nuro-course.html
@@ -8,7 +8,26 @@
   <meta name="description" content="BSc Neuroscience is a study of human nervous system. Know more about the Course Eligibility, Career, Scope & Colleges offering Admissions by Visiting EDUPROV
     ">
   <meta name="keywords"
-    content="">
+    content="bsc neuroscience,
+    bachelor's degree neuroscience,
+    bachelor of neuroscience,
+    bachelor of science in neuroscience,
+    bachelor of neurology,
+    ucl neuroscience bsc,
+    bsc neuroscience subjects,
+    neurology bachelor's degree,
+    bsc neurology course details,
+    bsc neuroscience colleges,
+    bsc neuroscience eligibility,
+    bsc hons neuroscience,
+    bachelor of science in neurology,
+    bsc neuroscience courses,
+    bachelor of arts in neuroscience,
+    bsc neurobiology,
+    bachelor in neurology,
+    psychology and neuroscience bsc,
+    neurobiology bachelor's degree,
+    ">
   <meta name="author" content="Renuka">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
