--- a/course/bsc-ot-course.html
+++ b/course/bsc-ot-course.html
@@ -8,7 +8,40 @@
   <meta name="description" content="BSc Operation Theatre Technology deals with preparation & handling of the machine & equipment in Operation theatre. Get admission, top colleges, scope @ EDUPROV
     ">
   <meta name="keywords"
-    content="">
+    content="bsc operation theatre technology,
+    bsc anesthesia and operation theatre technology,
+    bachelor of operation theatre technology,
+    anesthesia and operation theatre technology,
+    bsc ot and anesthesia technology,
+    bsc ot technician,
+    operation theatre and anaesthesia technology,
+    bsc operation theatre and anesthesia technology,
+    bsc ot technology,
+    bsc anaesthesia and operation theatre technology,
+    operation theatre and anesthesia technology syllabus,
+    bsc in ot technician,
+    anaesthesia and operation theatre technology,
+    bsc in operation theatre and anesthesia technology,
+    bsc operation theatre & anaesthesia technology syllabus,
+    bachelor in operation theatre technology,
+    bsc ot technician course,
+    bsc operation theatre technology syllabus,
+    bsc operation theatre & anaesthesia technology colleges,
+    bsc operation theatre technology course details,
+    operation theatre & anaesthesia technology,
+    bsc operation theatre and anesthesia technology syllabus,
+    bsc operation theatre technology scope,
+    bsc ot syllabus,
+    courses after bsc operation theatre technology,
+    bsc operation theatre technology colleges,
+    bsc ot technician syllabus,
+    bsc operation theatre & anaesthesia technology scope,
+    bsc operation theatre technology eligibility,
+    bachelor of science in operation theatre technology,
+    bs ot technology,
+    bsc operation technology,
+    scope of bsc operation theatre technology,
+    ">
   <meta name="author" content="Renuka">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
