--- a/course/bsc-sericulture-course.html
+++ b/course/bsc-sericulture-course.html
@@ -7,7 +7,14 @@
   <title> BSc Sericulture Course, Admission, Colleges, Scope | Eduprov</title>
   <meta name="description" content="BSc Sericulture deals with the nurturing of silkworms  raw silk used to manufacture silk clothes  products. Get admission in top college, career visit EDUPROV">
   <meta name="keywords"
-    content=" ">
+    content=" bsc sericulture,
+    bsc in sericulture,
+    bsc sericulture scope,
+    bsc sericulture course details,
+    bsc sericulture jobs,
+    bsc sericulture syllabus,
+    bsc hons sericulture,
+    ">
   <meta name="author" content="Renuka">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
