--- a/course/bvsc-ah-course.html
+++ b/course/bvsc-ah-course.html
@@ -7,7 +7,40 @@
   <title>BVSc AH Course Admission, Eligibility, Colleges | Eduprov</title>
   <meta name="description"
     content="Bachelor of Veterinary Science Animal Husbandry teaches on nourishment, treatment  breeding of animals. For admission, eligibility, entrance visit EDUPROV">
-  <meta name="keywords" content="	">
+  <meta name="keywords" content="	bachelor of veterinary science,
+  bsc veterinary,
+  bachelor of veterinary science and animal husbandry,
+  bsc veterinary science,
+  bachelor of veterinary medicine,
+  bachelor of science in veterinary medicine,
+  bachelor of veterinary,
+  bachelor of veterinary biology,
+  bachelor's degree in veterinary medicine,
+  bsc in veterinary science and animal husbandry,
+  bachelor of vet science,
+  bachelor of veterinary science & animal husbandry,
+  bachelor of veterinary biology and doctor of veterinary medicine,
+  bachelor of veterinary and wildlife science,
+  bachelor veterinary medicine,
+  bsc in veterinary,
+  bachelor degree in veterinary science,
+  bachelor in veterinary science and animal husbandry,
+  bachelor of veterinary science requirements,
+  bachelor of vet,
+  bachelor of science in veterinary technology,
+  bsc veterinary colleges,
+  bsc veterinary medicine,
+  bachelor of veterinary science distance education,
+  bachelor of science in veterinary,
+  veterinary technology bachelor of applied science degree,
+  bachelor of science doctor of veterinary medicine,
+  bachelor of science veterinary medicine,
+  bachelor of veterinary science eligibility,
+  bachelor of applied science in veterinary technology online,
+  bachelor degree for veterinary medicine,
+  ba veterinary science,
+  bachelor of veterinary science course duration,
+  ">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../dist/css/bootstrap.css" />
   <link rel="stylesheet" href="../faicon/css/all.css" />
