--- a/index.html
+++ b/index.html
@@ -144,7 +144,6 @@
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -184,7 +183,7 @@
     </div>
     <!--Nav Bar End-->
 
-    <div class="banner" style=" background-image: url('https://i.ibb.co/dGW93nZ/pencils-1280558-1920.jpg'); width: 100%;
+    <div class="banner" style=" background-image: url(images/pencils-1280558_1920.jpg); width: 100%;
     height: 600px;
     background-position: center center;
     padding-top: 45px;
@@ -271,44 +270,6 @@
        </div>
     </div>
  </section>
-
- <h2 class="text-center">Top Exams</h2>
- <div class="container mt-5">
-  
-    <section class="customer-logos slider ">
-       <div class="slide"  class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter"><img src="images/CET-exam.jpg"></div>
-       <div class="slide" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter"><img src="images/iit-jee.png"></div>
-       <div class="slide" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter"><img src="images/Gate-Exam.jpg"></div>
-       <div class="slide" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter"><img src="images/Gate-Exam.jpg"></div>
-       <div class="slide" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter"><img src="images/Gate-Exam.jpg"></div>
-       <div class="slide" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter"><img src="images/Gate-Exam.jpg"></div>
-       <div class="slide" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter"><img src="images/Gate-Exam.jpg"></div>
-       <div class="slide" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter"><img src="images/Gate-Exam.jpg"></div>
-       
-    </section>
- </div>
- <hr/>
-
- 
-<!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">CET Exam Details</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        Exam information
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
 
      <div class="wrapper">
      <img src="images/cookie.png" alt="cookies dialogue"/>
@@ -536,7 +497,7 @@
       <div class="row">
         <div class="col-md-8 col-sm-6 col-xs-12">
           <p class="copyright-text">Copyright &copy; 2021 All Rights Reserved by 
-       <a href="#">NaveenKumar</a>.
+       <a href="https://github.com/thephotogenicbug">NaveenKumar</a>.
           </p>
         </div>
 
