--- a/course/bsc-forensic-course.html
+++ b/course/bsc-forensic-course.html
@@ -7,7 +7,74 @@
   <title> BSc forensic Course, Admission, Colleges, Career | Eduprov</title>
   <meta name="description" content="counseling, college, eligibility, career visit EDUPROV">
   <meta name="keywords"
-    content="">
+    content="
+    bsc forensic science,
+bsc forensic science colleges,
+bsc forensic,
+bsc forensic science subjects,
+forensic science after bsc zoology,
+bsc forensic science admission 2020,
+bsc forensic science course details,
+bsc in forensic science colleges,
+bsc hons forensic science,
+after bsc forensic science,
+bsc forensic science entrance exam,
+about bsc forensic science,
+bsc forensic science colleges near me,
+entrance exam for bsc forensic science,
+bsc information security and digital forensics,
+forensic science after bsc chemistry,
+bsc in forensic science subjects,
+bsc forensic science details,
+bsc forensic medicine,
+bsc forensic subjects,
+bsc forensic science entrance exam 2020,
+bournemouth university forensic science,
+bsc forensic science admission,
+bsc forensic course,
+courses after bsc forensic science,
+bsc forensic science course duration,
+information about bsc forensic science,
+bsc digital forensics and cyber security,
+colleges offering bsc forensic science,
+bsc forensic science course eligibility,
+chandigarh university bsc forensic science,
+colleges for bsc in forensic science,
+bsc forensic science requirements,
+bsc forensic science best colleges,
+bsc forensic science information,
+bsc digital forensics,
+forensic science after bsc,
+honours in forensic science,
+bsc forensic science university,
+bsc forensic science admission process,
+bsc forensic science course fees,
+bsc forensic science honours,
+bsc forensic science course eligibility,
+bsc forensic science jain university,
+colleges for bsc in forensic science,
+bsc forensic science requirements,
+bsc forensic science best colleges,
+bsc forensic science information,
+bsc digital forensics,
+forensic science after bsc,
+honours in forensic science,
+bsc forensic science university,
+bsc forensic science admission process,
+bsc forensic science course fees,
+bsc forensic science honours,
+bsc information science and cyber forensics,
+forensic science after bsc,
+about bsc forensic science course,
+forensic bsc colleges,
+honours in forensic science,
+bsc forensic science university,
+bsc computer forensics,
+bsc forensic science admission process,
+bsc forensic admission,
+bsc forensic science course fees,
+bsc forensic science honours,
+">
   <meta name="author" content="Naveen">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
