--- a/courses.html
+++ b/courses.html
@@ -92,7 +92,7 @@
                 <label class="title fz-20">ENGINEERING</label>
                 <div class="desc">
                   <p>
-
+                    Engineering is a stream of education that involves the application of Science, Technology and Mathematics to innovate, design, develop and maintain machines, structures, software, hardware and systems & processes.
                   </p>
                 </div>
                 <span class="link">Start here <i class="fa fa-arrow-right"></i></span>
@@ -142,7 +142,7 @@
                 <label class="title fz-20">Arts or Humanities</label>
                 <div class="desc">
                   <p>
-
+                    Specializations and courses in the arts and humanities (including fine arts, history, and philosophy) 
                   </p>
                 </div>
                 <span class="link">Start here <i class="fa fa-arrow-right"></i></span>
@@ -208,7 +208,9 @@
               <div class="content">
                 <label class="title fz-20">Para-Medical</label>
                 <div class="desc">
-                  <p></p>
+                  <p>
+                    The Paramedic course involves emergency medical services required in the pre-hospital environment.
+                  </p>
                 </div>
                 <span class="link">Start here <i class="fa fa-arrow-right"></i></span>
               </div>
@@ -253,7 +255,7 @@
                 <label class="title fz-20" id="back">Schools</label>
                 <div class="desc">
                   <p>
-                    
+                    A school is an educational institution designed to provide learning spaces and learning environments for the teaching of students (or "pupils") under the direction of teachers. 
                   </p>
                 </div>
                 <span class="link">Start here <i class="fa fa-arrow-right"></i></span>
@@ -269,7 +271,7 @@
                 <label class="title fz-20" id="back">Colleges</label>
                 <div class="desc">
                   <p>
-                    
+                    A college is an educational institution or a constituent part of one. A college may be a degree-awarding tertiary educational institution, a part of a collegiate or fede'ral university, an institution offering vocational education, or a secondary school.
                   </p>
                 </div>
                 <span class="link">Start here <i class="fa fa-arrow-right"></i></span>
