--- a/index.html
+++ b/index.html
@@ -460,58 +460,127 @@
 
 
    <!-- Site footer -->
-   <footer class="site-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12 col-md-6">
-          <h6>About</h6>
-          <p class="text-justify">EDUPROV is an esteemed name in Career Counselling, Overseas Education & Admission Guidance, institute located in the heart of Bengaluru. EDUPROV works to promote excellence in education and with our unique ability, our successful track record and continued growth, EDUPROV has developed to become one of the most active, innovative and well-respected organizations in the field admission guidance, overseas education and career counselling</p>
+   <div class="container-fluid justify-content-center px-0">
+    <footer>
+      <div class="row justify-content-around mb-0 pt-5 mx-4">
+        <div class="col-xl-2 col-md-4 order-xl-1 order-4 mr-xl-0 my-auto">
+          <ul class="list-unstyled mt-md-3 mt-5">
+            <label style="font-weight: bold">Social Media</label>
+            <li class="social">
+                <span>
+                    <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span>
+                <span>
+                    <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i>
+                </span>
+                <span>
+                    <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i>
+                </span>
+            </li>
+        </ul>
+          <ul class="list-unstyled mt-md-3 mt-5">
+            <label style="font-weight: bold">Address</label>
+            <p>
+              Address: No 20 2nd Floor<br />
+              Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
+              560001
+            </p>
+            <p>
+              Contact:<br />
+              +91 80 25591146
+            </p>
+          </ul>
+          <ul class="list-unstyled my-xl-4 my-md-3">
+            <label class="mt-md-0 mt-4" style="font-weight: bold">Copyright</label>
+            <a href="https://github.com/thephotogenicbug" style="text-decoration: none; color: white">
+              <li>&#9400; thephotogenicbug</li>
+            </a>
+          </ul>
         </div>
-
-        <div class="col-xs-6 col-md-3">
-          <h6>Categories</h6>
-          <ul class="footer-links">
-            <li><a href="">C</a></li>
-            <li><a href="">UI Design</a></li>
-            <li><a href="">PHP</a></li>
-            <li><a href="">Java</a></li>
-            <li><a href="">Android</a></li>
-            <li><a href="">Templates</a></li>
+        <div class="col-xl-2 col-md-3 pt-4 order-1">
+          <ul class="list-unstyled">
+            <label class="mt-md-0 mt-4" style="font-weight: bold">USA Location</label>
+            <p>
+              N.E Blaine Minnesota USA 55434<br />
+              (+1) 651 967 7789
+            </p>
           </ul>
         </div>
 
-        <div class="col-xs-6 col-md-3">
-          <h6>Quick Links</h6>
-          <ul class="footer-links">
-            <li><a href="">About Us</a></li>
-            <li><a href="">Contact Us</a></li>
-            <li><a href="">Contribute</a></li>
-            <li><a href="">Privacy Policy</a></li>
-            <li><a href="">Sitemap</a></li>
+        <div class="col-xl-2 col-md-3 pt-4 order-2">
+          <ul class="list-unstyled">
+            <label class="mt-md-0 mt-4" style="font-weight: bold">Study Abroad</label>
+            <a href="" style="text-decoration: none; color: white">
+              <li>USA</li>
+            </a>
+            <a href="" style="text-decoration: none; color: white">
+              <li>UK</li>
+            </a>
+            <a href="" style="text-decoration: none; color: white">
+              <li>AUSTRALIA</li>
+            </a>
+            <a href="" style="text-decoration: none; color: white">
+              <li>CANADA</li>
+            </a>
+            <a href="" style="text-decoration: none; color: white">
+              <li>GERMANY</li>
+            </a>
+            <a href="" style="text-decoration: none; color: white">
+              <li>ARMENIA</li>
+            </a>
+            <a href="" style="text-decoration: none; color: white">
+              <li></li>
+            </a>
+          </ul>
+        </div>
+        <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
+          <ul class="list-unstyled">
+            <label class="mt-md-0 mt-4" style="font-weight: bold">Top Exams</label>
+            <a href="" style="text-decoration: none; color: white">
+              <li>CET</li>
+            </a>
+            <a href="" style="text-decoration: none; color: white">
+              <li>IIT-JEE</li>
+            </a>
+            <a href="" style="text-decoration: none; color: white">
+              <li>GATE</li>
+            </a>
+            <a href="" style="text-decoration: none; color: white">
+              <li>AIPMT</li>
+            </a>
+            <a href="" style="text-decoration: none; color: white">
+              <li>CAT</li>
+            </a>
+            <a href="" style="text-decoration: none; color: white">
+              <li>MAT</li>
+            </a>
+          </ul>
+        </div>
+        <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
+          <ul class="list-unstyled">
+            <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
+            <a href="" style="text-decoration: none; color: white">
+              <li>MBA</li>
+            </a>
+            <a href="" style="text-decoration: none; color: white">
+              <li>MEDICAL</li>
+            </a>
+            <a href="" style="text-decoration: none; color: white">
+              <li>ENGINEERING</li>
+            </a>
+            <a href="" style="text-decoration: none; color: white">
+              <li>LAW</li>
+            </a>
+            <a href="" style="text-decoration: none; color: white">
+              <li>DESIGNING</li>
+            </a>
+            <a href="" style="text-decoration: none; color: white">
+              <li>ARTS</li>
+            </a>
           </ul>
         </div>
       </div>
-      <hr>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-sm-6 col-xs-12">
-          <p class="copyright-text">Copyright &copy; 2021 All Rights Reserved by 
-       <a href="https://github.com/thephotogenicbug">NaveenKumar</a>.
-          </p>
-        </div>
-
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <ul class="social-icons">
-            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
-            <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
-          </ul>
-        </div>
-      </div>
-    </div>
-</footer>
+    </footer>
+  </div>
   <!--Footer End-->
     <script>
       const cookieBox = document.querySelector(".wrapper"),
