--- a/science.html
+++ b/science.html
@@ -70,10 +70,6 @@
 
 
 
-
-
-
-
   <!--Course Start-->
   <div class="container">
     <div class="row">
@@ -143,13 +139,13 @@
 
           <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="course/btech-in-dairy-technology.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20">B. Sc Dairy Technology </label>
                   <div class="desc">
                     <p>
-                  
+                        B.Tech Diary Technology deals with the technologized form of processing dairy.
                     </p>
                   </div>
                   <span class="link">Read More <i class="fa fa-arrow-right"></i></span>
