--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
- <link rel="canonical" href="https://eduprov.in" />
+ <link rel="canonical" href="https://eduprov.com" />
   <title>EDUPROV - Explore Top Colleges, Courses, Fees and Exams</title>
   <meta name="description" content="  HIT THE BEST TOP NOTCHED UNIVERSITIES, GET A GRIP ON ADMISSION
   GUIDANCE AND TRAVEL THE WORLD WITH THE BEST UNIVERSITIES ON YOUR
