disable cookies for now

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
   </div>
 
 
-     <div class="wrapper">
+    <!-- <div class="wrapper">
      <img src="images/cookie.png" alt="cookies dialogue"/>
      <div class="content">
        <header>Cookies Alert</header>
@@ -325,7 +325,7 @@
          <a href="#">Learn More</a>
        </div>
      </div>
-   </div>
+   </div>-->
 
    
    
@@ -627,7 +627,7 @@
     </footer>
   </div>
   <!--Footer End-->
-    <script>
+  <!--  <script>
       const cookieBox = document.querySelector(".wrapper"),
       acceptBtn = cookieBox.querySelector(".buttons button");
 
@@ -641,7 +641,7 @@
       }
       let checkCookie=document.cookie.indexOf("CookieBy=NaveenKumar");
       checkCookie != -1 ? cookieBox.classList.add("hide"): cookieBox.classList.remove("hide");
-    </script>
+    </script>-->
 
 
 </body>
