--- a/courses.html
+++ b/courses.html
@@ -226,7 +226,9 @@
               <div class="content">
                 <label class="title fz-20">Science</label>
                 <div class="desc">
-                  <p></p>
+                  <p>
+                    science courses are intended to allow individuals to understand the relationships that science, technology, and society share in our everyday world. 
+                  </p>
                 </div>
                 <span class="link">Start here <i class="fa fa-arrow-right"></i></span>
               </div>
