--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <nav class="navbar navbar-expand-md  navbar-light bg-dark">
         <a href="#" class="navbar-brand"> 
           <div id="logo" >
-            <img src="images/logo-white.png" href="https://eduprov.in/index.html" alt="Edu-logo" title="Logo"/>
+            <img src="images/logo-white.png" href="https://eduprov.com/" alt="Edu-logo" title="Logo"/>
           </div>
         </a>
         <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
