--- a/courses.html
+++ b/courses.html
@@ -136,7 +136,7 @@
         </div>
         <div class="col-md-4" id="callback">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="arts-humanities.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Arts or Humanities</label>
