--- a/student-application-form.html
+++ b/student-application-form.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Contact | EDUPROV</title>
+  <title>Student Application Form| EDUPROV</title>
   <meta name="description" content="
     Commerce is a field which students who have an interest in the field of financial 
     information/transactions, trading of economic value, etc." />
@@ -42,7 +42,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
-  <title>Contact Us</title>
+  
 </head>
 
 <body>
@@ -96,7 +96,7 @@
 
   <!--Contact Form Start-->
   <form class="row g-3 needs-validation" novalidate>
-  <div class="container mt-2">
+  <div class="container mt-5">
     <!--container start-->
     <div class="row">
       <!--row start-->
