--- a/exams.html
+++ b/exams.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="canonical" href="" />
-  <title>Engineering | Course</title>
+  <title>Exams | Course</title>
   <meta name="description" content="" />
 
   <link rel="stylesheet" href="dist/css/bootstrap.css" />
