Bolded Important Text on Bsc pathology

--- a/course/b.sc-pathology-course.html
+++ b/course/b.sc-pathology-course.html
@@ -107,7 +107,7 @@
             </p>
 
             <p class="text-justify" id="paragraph-font">
-                Different types of animal research included in many programs for helping students in learning. With <strong>bachelor's degree students </strong>
+               <b> Different types of animal research included in many programs for helping students in learning.</b> With <strong>bachelor's degree students </strong>
                 prepared with pathology background, then after students can choose the area of specializing such as <strong>environmental pathology, 
                   molecular pathology or toxicology.</strong>
 
