Bolded important text in Logistics Management

--- a/course/logistics-management-course.html
+++ b/course/logistics-management-course.html
@@ -121,7 +121,7 @@
 
             <div class="col-md-12">
                <ul>
-                   <li>Diploma</li>
+                   <li><b>Diploma</b></li>
                    <li>Undergraduate degree</li>
                    <li>Postgraduate degree</li>
                    <li>Postgraduate diploma level</li>
