update exam dates

--- a/exams/kcet-exam.html
+++ b/exams/kcet-exam.html
@@ -648,26 +648,15 @@
         </h2>
     </div>
     <div class="col-md-12">
-        <table class="table  table-hover table-bordered text-center">
-        <tr>
-            <th>Release of Application form</th>
-            <th>Last date to apply</th>
-            <th>Last date to pay application fee</th>
-            <th>Admit card availability</th>
-            <th>Date of KCET exam</th>
-            <th>Result declaration</th>
-            <th>Counseling process</th>
-        </tr>
-        <tr>
-            <td>April 2021.</td>
-            <td>3rd week of April 2021.</td>
-            <td>4th week of April 2021</td>
-            <td>3rd week of June.</td>
-            <td>7th & 8th July 2021.</td>
-            <td>3rd week of July 2021.</td>
-            <td>4th week of July 2021</td>
-        </tr>
-        </table>
+       <ul>
+        <li>Release of Application form : April 2021.</li>
+        <li>Last date to apply : 3rd week of April 2021.</li>
+        <li>Last date to pay application fee : 4th week of April 2021</li>
+        <li>Admit card availability : 3rd week of June.</li>
+        <li>Date of KCET exam : 7th & 8th July 2021.</li>
+        <li>Result declaration : 3rd week of July 2021.</li>
+        <li>Counseling process : 4th week of July 2021</li>
+       </ul>
     </div>
 
 
