--- a/para-medical.html
+++ b/para-medical.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Para-Medical | EDUPROV</title>
+  <title> Undergraduate, Diploma, Para-Medical | EDUPROV</title>
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <link rel="stylesheet" href="dist/css/bootstrap.css">
@@ -196,13 +196,13 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="" style="text-decoration: none;" class="icon-box text-center"
+            <a href="course/bmlt.html" style="text-decoration: none;" class="icon-box text-center"
               data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">B.Sc Medical Laboratory Technology</label>
                 <div class="desc">
                   <p>
-                   pending content
+                    Bachelor of Medical Lab Technology deal with diagnosis, prevention of diseases with laboratory tests,
                   </p>
                 </div>
                 <span class="link">Read More <i class="fa fa-arrow-right"></i></span>
@@ -292,13 +292,13 @@
     </div>
     <div class="col-md-4">
         <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-          <a href="" style="text-decoration: none;" class="icon-box text-center"
+          <a href="course/b-pharm-course.html" style="text-decoration: none;" class="icon-box text-center"
             data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
             <div class="content">
               <label class="title fz-20">Bachelor of Pharmacy</label>
               <div class="desc">
                 <p>
-                 pending content
+                  B Pharmacy deals in pharmaceutical education related to drugs medicine. 
                 </p>
               </div>
               <span class="link">Read More <i class="fa fa-arrow-right"></i></span>
@@ -404,13 +404,13 @@
     </div>
     <div class="col-md-4">
         <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-          <a href="" style="text-decoration: none;" class="icon-box text-center"
+          <a href="course/bsc-psycology.html" style="text-decoration: none;" class="icon-box text-center"
             data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
             <div class="content">
               <label class="title fz-20">B. Sc Psychology</label>
               <div class="desc">
                 <p>
-                 pending content
+                  BSc Psychology is a 3 year UG course related to study of human brain & emotions.
                 </p>
               </div>
               <span class="link">Read More <i class="fa fa-arrow-right"></i></span>
