--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
  <link rel="canonical" href="https://eduprov.com/" />
-  <title>EDUPROV - Admission Guidance, Career Counselling | EDUPROV</title>
+  <title>EDUPROV - Admission Guidance, Career Counselling, Courses | EDUPROV</title>
   <meta name="description" content="  HIT THE BEST TOP NOTCHED UNIVERSITIES, GET A GRIP ON ADMISSION
   GUIDANCE AND TRAVEL THE WORLD WITH THE BEST UNIVERSITIES" />
   <meta name="keywords" content="abroad admission consultants, abroad education consultants, 
