--- a/law.html
+++ b/law.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="canonical" href="" />
-  <title>Law Course | EDUPROV</title>
+  <title>Undergraduate LAW,  Postgraduate LAW Law Courses | EDUPROV</title>
   <meta name="description" content="LLB or Bachelor of Legislative Law is an undergraduate law degree which is a required in the field of law. LLB duration is 3 years. 
     LLM is a postgraduate degree in law and an aspirant is required to possess a graduation degree in law to take up the course. 
     " />
