--- a/mba.html
+++ b/mba.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MBA Course | EDUPROV</title>
+  <title> Postgraduate, MBA Courses | EDUPROV</title>
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <link rel="stylesheet" href="dist/css/bootstrap.css" />
