--- a/medical.html
+++ b/medical.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Medical</title>
+  <title> Undergraduate Medical, Postgraduate Medical, Medical Courses | EDUPROV</title>
   
   <link rel="stylesheet" href="dist/css/bootstrap.css">
   <link rel="stylesheet" href="faicon/css/all.css">
